
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int uint8_t ;
typedef int FILE ;


 int fclose (int *) ;
 int * fopen (char*,char*) ;
 int fwrite (int *,int,size_t,int *) ;

void bin2file (uint8_t bin[], size_t len)
{
  FILE *out=fopen ("sh_cmd.bin", "wb");
  if (out!=((void*)0))
  {
    fwrite (bin, 1, len, out);
    fclose (out);
  }
}
